fixed spacing on burger menu

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -535,7 +535,7 @@ h3 {
     z-index: 20;
     right: 30px;
     top: 35px;
-    height: 35px;
+    height: 40px;
     width: 40px;
     border-radius: 5px;
     background-color: #FFFFFF22;
@@ -548,8 +548,36 @@ h3 {
     }
     
     .menu-toggle-button {
-        width: 30px;
-        height: 30px;
+        width: 80%;
+        height: 100%;
+        position: relative;
+        
+        .menu-burger-line {
+            width: 100%;
+            height: 4px;
+            background-color: white;
+            position: absolute;
+        }
+        
+        #menu-burger-line-1 {
+            top: 20%;
+        }
+        
+        #menu-burger-line-2 {
+            top: 50%;
+            transform: translateY(-50%);
+        }
+        
+        #menu-burger-line-3 {
+            top: 80%;
+            transform: translateY(-100%);
+        }
+        
+        svg {
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+        }
     }
     
     #menu-close {
@@ -1720,7 +1748,7 @@ input {
             }
 
             .portfolio-laptop {
-                width: 78%;
+                width: 78.5%;
                 bottom: 0;
                 left: 7.1%;
                 z-index: 7;
